simplex: fix navbar spacing, fix navbar-form, fix subnav dropdown, style divider-vertical

--- a/simplex/bootstrap.css
+++ b/simplex/bootstrap.css
@@ -4208,19 +4208,23 @@ h6 {
   box-shadow: inset 0 -1px #cfcaca;
 }
 .navbar .brand {
-  padding: 13px 20px 10px;
+  padding: 12px 20px 8px;
   font-weight: bold;
 }
 .navbar .brand:hover {
   color: #da370f;
 }
 .navbar .navbar-text {
-  padding: 15px 20px 9px;
+  padding: 14px 15px 7px;
   line-height: 19px;
   color: #999999;
 }
+.navbar .divider-vertical {
+  height: 39px;
+  background-color: #eeeeee;
+}
 .navbar .nav > li > a {
-  padding: 15px 20px 9px;
+  padding: 14px 15px 7px;
   text-shadow: none;
 }
 .navbar .nav > li > a:hover {
@@ -4229,6 +4233,12 @@ h6 {
 .navbar .nav .active > a,
 .navbar .nav .active > a:hover {
   background-color: transparent;
+}
+.navbar .navbar-search {
+  margin-top: 5px;
+}
+.navbar .navbar-search input[type="text"] {
+  margin-bottom: 5px;
 }
 .navbar .nav li.dropdown.open > .dropdown-toggle,
 .navbar .nav li.dropdown.active > .dropdown-toggle:hover {
@@ -4239,7 +4249,7 @@ h6 {
   border-bottom-color: #555555;
   opacity: 1;
 }
-.navbar .nav li.dropdown:hover .dropdown-toggle .caret,
+.navbar .nav li.dropdown .dropdown-toggle:hover .caret,
 .navbar .nav li.dropdown.active > .dropdown-toggle .caret,
 .navbar .nav li.dropdown.open .dropdown-toggle .caret {
   border-top-color: #da370f;
@@ -4296,15 +4306,15 @@ div.subnav .nav li.dropdown .dropdown-toggle .caret {
   border-bottom-color: #555555;
   opacity: 1;
 }
-div.subnav .nav li.dropdown:hover .dropdown-toggle .caret,
+div.subnav .nav li.dropdown .dropdown-toggle:hover .caret,
 div.subnav .nav li.dropdown.active .dropdown-toggle .caret,
 div.subnav .nav li.dropdown.open .dropdown-toggle .caret {
   border-top-color: #da370f;
   border-bottom-color: #da370f;
   opacity: 1;
 }
-div.subnav .dropdown-menu a:hover {
-  background-color: #fbebe9;
+div.subnav .dropdown.open:hover .dropdown-toggle {
+  background-color: transparent;
 }
 @media (max-width: 979px) {
   form.navbar-form,
@@ -4389,7 +4399,7 @@ div.subnav .dropdown-menu a:hover {
   border-bottom-color: #555555;
   opacity: 1;
 }
-.nav-pills .dropdown:hover .dropdown-toggle .caret {
+.nav-pills .dropdown .dropdown-toggle:hover .caret {
   border-top-color: #da370f;
   border-bottom-color: #da370f;
 }
@@ -4469,6 +4479,9 @@ i[class^="icon-"] {
 }
 .label {
   padding: 4px 4px 3px;
+  margin-left: 1px;
+  margin-right: 1px;
+  line-height: 26px;
   font-weight: normal;
 }
 .hero-unit {
@@ -4511,6 +4524,13 @@ i[class^="icon-"] {
 .pagination li.active > a {
   background-color: #fbebe9;
   color: #da370f;
+}
+@media (max-width: 979px) {
+  .nav-collapse.collapse .navbar-form,
+  .nav-collapse.collapse .navbar-search {
+    border-top: 1px solid #eeeeee;
+    border-bottom: 1px solid #eeeeee;
+  }
 }
 .pull-right {
   float: right;
